--- a/photos/index.html
+++ b/photos/index.html
@@ -7,9 +7,6 @@
 
 <meta name="description" content="Photos from coDelhi 2014 edition">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script src="js/jquery.min.js"></script>
-
 <link rel="stylesheet" href="css/blueimp-gallery.css">
 <link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
 <link rel="stylesheet" href="css/blueimp-gallery-video.css">
@@ -25,207 +22,187 @@
 <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
 <h3> Day 1 </h3>
 <div id="links" class="links">
-<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-</div>
-
-<a href="day1/0001.jpg" title="coDelhi">
-    <img src="day1/0001.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0002.jpg" title="coDelhi">
-    <img src="day1/0002.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0003.jpg" title="coDelhi">
-    <img src="day1/0003.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0004.jpg" title="coDelhi">
-    <img src="day1/0004.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0005.jpg" title="coDelhi">
-    <img src="day1/0005.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0006.jpg" title="coDelhi">
-    <img src="day1/0006.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0007.jpg" title="coDelhi">
-    <img src="day1/0007.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0008.jpg" title="coDelhi">
-    <img src="day1/0008.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0009.jpg" title="coDelhi">
-    <img src="day1/0009.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0010.jpg" title="coDelhi">
-    <img src="day1/0010.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0011.jpg" title="coDelhi">
-    <img src="day1/0011.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0012.jpg" title="coDelhi">
-    <img src="day1/0012.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0013.jpg" title="coDelhi">
-    <img src="day1/0013.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0014.jpg" title="coDelhi">
-    <img src="day1/0014.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0015.jpg" title="coDelhi">
-    <img src="day1/0015.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0016.jpg" title="coDelhi">
-    <img src="day1/0016.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0017.jpg" title="coDelhi">
-    <img src="day1/0017.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0018.jpg" title="coDelhi">
-    <img src="day1/0018.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0019.jpg" title="coDelhi">
-    <img src="day1/0019.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0020.jpg" title="coDelhi">
-    <img src="day1/0020.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0021.jpg" title="coDelhi">
-    <img src="day1/0021.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0022.jpg" title="coDelhi">
-    <img src="day1/0022.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0023.jpg" title="coDelhi">
-    <img src="day1/0023.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0024.jpg" title="coDelhi">
-    <img src="day1/0024.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0025.jpg" title="coDelhi">
-    <img src="day1/0025.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0026.jpg" title="coDelhi">
-    <img src="day1/0026.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0027.jpg" title="coDelhi">
-    <img src="day1/0027.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0028.jpg" title="coDelhi">
-    <img src="day1/0028.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0029.jpg" title="coDelhi">
-    <img src="day1/0029.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0030.jpg" title="coDelhi">
-    <img src="day1/0030.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0031.jpg" title="coDelhi">
-    <img src="day1/0031.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0032.jpg" title="coDelhi">
-    <img src="day1/0032.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0033.jpg" title="coDelhi">
-    <img src="day1/0033.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0034.jpg" title="coDelhi">
-    <img src="day1/0034.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0035.jpg" title="coDelhi">
-    <img src="day1/0035.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0036.jpg" title="coDelhi">
-    <img src="day1/0036.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0037.jpg" title="coDelhi">
-    <img src="day1/0037.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0038.jpg" title="coDelhi">
-    <img src="day1/0038.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0039.jpg" title="coDelhi">
-    <img src="day1/0039.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0040.jpg" title="coDelhi">
-    <img src="day1/0040.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0041.jpg" title="coDelhi">
-    <img src="day1/0041.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0042.jpg" title="coDelhi">
-    <img src="day1/0042.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0043.jpg" title="coDelhi">
-    <img src="day1/0043.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0044.jpg" title="coDelhi">
-    <img src="day1/0044.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0045.jpg" title="coDelhi">
-    <img src="day1/0045.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0046.jpg" title="coDelhi">
-    <img src="day1/0046.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0047.jpg" title="coDelhi">
-    <img src="day1/0047.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0048.jpg" title="coDelhi">
-    <img src="day1/0048.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0049.jpg" title="coDelhi">
-    <img src="day1/0049.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0050.jpg" title="coDelhi">
-    <img src="day1/0050.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0051.jpg" title="coDelhi">
-    <img src="day1/0051.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0052.jpg" title="coDelhi">
-    <img src="day1/0052.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0053.jpg" title="coDelhi">
-    <img src="day1/0053.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0054.jpg" title="coDelhi">
-    <img src="day1/0054.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0055.jpg" title="coDelhi">
-    <img src="day1/0055.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0056.jpg" title="coDelhi">
-    <img src="day1/0056.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0057.jpg" title="coDelhi">
-    <img src="day1/0057.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0058.jpg" title="coDelhi">
-    <img src="day1/0058.thumb.jpg" alt="coDelhi">
-</a>
-<a href="day1/0059.jpg" title="coDelhi">
-    <img src="day1/0059.thumb.jpg" alt="coDelhi">
-</a>
+    <a href="day1/0001.jpg" title="coDelhi">
+        <img src="day1/0001.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0002.jpg" title="coDelhi">
+        <img src="day1/0002.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0003.jpg" title="coDelhi">
+        <img src="day1/0003.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0004.jpg" title="coDelhi">
+        <img src="day1/0004.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0005.jpg" title="coDelhi">
+        <img src="day1/0005.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0006.jpg" title="coDelhi">
+        <img src="day1/0006.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0007.jpg" title="coDelhi">
+        <img src="day1/0007.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0008.jpg" title="coDelhi">
+        <img src="day1/0008.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0009.jpg" title="coDelhi">
+        <img src="day1/0009.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0010.jpg" title="coDelhi">
+        <img src="day1/0010.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0011.jpg" title="coDelhi">
+        <img src="day1/0011.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0012.jpg" title="coDelhi">
+        <img src="day1/0012.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0013.jpg" title="coDelhi">
+        <img src="day1/0013.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0014.jpg" title="coDelhi">
+        <img src="day1/0014.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0015.jpg" title="coDelhi">
+        <img src="day1/0015.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0016.jpg" title="coDelhi">
+        <img src="day1/0016.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0017.jpg" title="coDelhi">
+        <img src="day1/0017.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0018.jpg" title="coDelhi">
+        <img src="day1/0018.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0019.jpg" title="coDelhi">
+        <img src="day1/0019.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0020.jpg" title="coDelhi">
+        <img src="day1/0020.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0021.jpg" title="coDelhi">
+        <img src="day1/0021.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0022.jpg" title="coDelhi">
+        <img src="day1/0022.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0023.jpg" title="coDelhi">
+        <img src="day1/0023.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0024.jpg" title="coDelhi">
+        <img src="day1/0024.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0025.jpg" title="coDelhi">
+        <img src="day1/0025.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0026.jpg" title="coDelhi">
+        <img src="day1/0026.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0027.jpg" title="coDelhi">
+        <img src="day1/0027.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0028.jpg" title="coDelhi">
+        <img src="day1/0028.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0029.jpg" title="coDelhi">
+        <img src="day1/0029.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0030.jpg" title="coDelhi">
+        <img src="day1/0030.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0031.jpg" title="coDelhi">
+        <img src="day1/0031.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0032.jpg" title="coDelhi">
+        <img src="day1/0032.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0033.jpg" title="coDelhi">
+        <img src="day1/0033.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0034.jpg" title="coDelhi">
+        <img src="day1/0034.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0035.jpg" title="coDelhi">
+        <img src="day1/0035.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0036.jpg" title="coDelhi">
+        <img src="day1/0036.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0037.jpg" title="coDelhi">
+        <img src="day1/0037.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0038.jpg" title="coDelhi">
+        <img src="day1/0038.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0039.jpg" title="coDelhi">
+        <img src="day1/0039.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0040.jpg" title="coDelhi">
+        <img src="day1/0040.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0041.jpg" title="coDelhi">
+        <img src="day1/0041.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0042.jpg" title="coDelhi">
+        <img src="day1/0042.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0043.jpg" title="coDelhi">
+        <img src="day1/0043.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0044.jpg" title="coDelhi">
+        <img src="day1/0044.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0045.jpg" title="coDelhi">
+        <img src="day1/0045.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0046.jpg" title="coDelhi">
+        <img src="day1/0046.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0047.jpg" title="coDelhi">
+        <img src="day1/0047.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0048.jpg" title="coDelhi">
+        <img src="day1/0048.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0049.jpg" title="coDelhi">
+        <img src="day1/0049.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0050.jpg" title="coDelhi">
+        <img src="day1/0050.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0051.jpg" title="coDelhi">
+        <img src="day1/0051.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0052.jpg" title="coDelhi">
+        <img src="day1/0052.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0053.jpg" title="coDelhi">
+        <img src="day1/0053.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0054.jpg" title="coDelhi">
+        <img src="day1/0054.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0055.jpg" title="coDelhi">
+        <img src="day1/0055.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0056.jpg" title="coDelhi">
+        <img src="day1/0056.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0057.jpg" title="coDelhi">
+        <img src="day1/0057.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0058.jpg" title="coDelhi">
+        <img src="day1/0058.thumb.jpg" alt="coDelhi">
+    </a>
+    <a href="day1/0059.jpg" title="coDelhi">
+        <img src="day1/0059.thumb.jpg" alt="coDelhi">
+    </a>
 </div>
 
 <h3> Day 2 </h3>
 <div id="links2" class="links2">
-<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-</div>
-
 <a href="day2/0001.jpg" title="coDelhi">
     <img src="day2/0001.thumb.jpg" alt="coDelhi">
 </a>
@@ -459,6 +436,15 @@
 </a>
 
 </div>
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+    <div class="slides"></div>
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+</div>
 
 <script src="js/blueimp-helper.js"></script>
 <script src="js/blueimp-gallery.js"></script>
@@ -467,7 +453,18 @@
 <script src="js/blueimp-gallery-video.js"></script>
 <script src="js/blueimp-gallery-vimeo.js"></script>
 <script src="js/blueimp-gallery-youtube.js"></script>
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>
+/*jslint evil: true */
+/*global window, document*/
+// Including jQuery via the protocol relative url above works for both http and https.
+// Explicitly including jQuery via https allows running the Gallery demo as local file:
+if (!window.jQuery) {
+document.write(
+'<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"><\/script>'
+);
+}
+</script>
 <script src="js/jquery.blueimp-gallery.js"></script>
 
 <script>
